--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -13,7 +13,7 @@
 
 h1 {
     font-family: 'Kaushan Script', cursive;
-    font-size: 60px;
+    font-size: 3.75rem;
     color: whitesmoke;
     text-align: center;
     margin-top: 6.25rem;
